Arreglo de ruta de imagen

--- a/parte1y2/index.html
+++ b/parte1y2/index.html
@@ -11,14 +11,14 @@
 <ul>
 	<li><b>HTML 5</b></li>
 </ul>
-	<img src="C:\Users\kathe\Desktop\laboratoria\lenguajesdelaweb\img\html.png" style="border: 1px solid blue;">
+	<img src="img/html.png" style="border: 1px solid blue;">
 		<p style="color: yellow; font-size: 14 px;"><b>HTML 5</b><em>(Hiper Text Markup Lenguage</em>, version 5) es la quinta revisión importante del lenguaje básico de la World Wide Web. HTML </p>
 		<p><b>Usa la extensión .html</b></p>
 
 <ul>
 	<li><b>CSS 3</b></li>
 </ul>
-	<img src="C:\Users\kathe\Desktop\laboratoria\lenguajesdelaweb\img\css.png" style="border: 1px solid blue;">
+	<img src="img/css.png" style="border: 1px solid blue;">
 
 	<p style="color: yellow; font-size: 14 px;"><b>Hoja de estilo de cascada o CSS</b>(siglas en ingles de <em>cascading style sheets)</em> es un lenguaje usado para definir y crear la presentación de un documento estructurado escrito en HTML.</p>
 	<p><b>Usa la extensión .css</b></p>
@@ -26,7 +26,7 @@
 <ul>
 	<li><b>Javascript</b></li>
 </ul>
-	<img src="C:\Users\kathe\Desktop\laboratoria\lenguajesdelaweb\img\js.png" style="border: 1px solid blue;">
+	<img src="img/js.png" style="border: 1px solid blue;">
 
 	<p style="color: yellow; font-size: 14 px;"><b>Javascript</b>(abreviado comúnmente <b>"JS"</b>) es un lenguaje de programación interpretado utilizado principalmente en el lado del cliente (cliente-side), implementado como parte de un navegador web permitiendo mejoras en la interfaz de usuario y páginas web dinámicas</p>
 	<p><b>Usa la extensión .js</b></p>
